<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a1959freetibet.hw1part2.Contact">

    <EditText
        android:id="@+id/editText7"
        android:layout_width="177dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cell"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:text="cell" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="251dp"
        android:layout_height="171dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/asa"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/asa"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="242dp"
        android:layout_height="42dp"
        android:layout_marginEnd="-15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintLeft_toRightOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="198dp"
        tools:text="phone_number" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="233dp"
        android:layout_height="39dp"
        android:layout_marginEnd="-15dp"
        android:layout_marginRight="-14dp"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintRight_toRightOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:text="Phone_Number" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="228dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/masterofweb_asaiit_org"
        app:layout_constraintLeft_toLeftOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/space"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="424dp"
        tools:text="masterofweb@asaiit.org" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/phone_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:drawable/sym_action_call" />

    <Space
        android:layout_width="251dp"
        android:layout_height="9dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:id="@+id/space"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="112dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/email_image"
        app:layout_constraintBottom_toBottomOf="@+id/editText4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@android:drawable/sym_action_email" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/work"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:text="work" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="142dp"
        android:layout_height="39dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/master"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:text="work" />

</android.support.constraint.ConstraintLayout>
